--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,7 @@
     "def three_x_y_at_nine(x):\n",
     "    return 27*x\n",
     "\n",
-    "printthree_x_y_at_one(3) # 9\n",
+    "print(three_x_y_at_one(3)) # 9\n",
     "three_x_y_at_three(3)# 27\n",
     "three_x_y_at_six(1) # 18\n",
     "three_x_y_at_six(2) # 36"
