--- a/index.ipynb
+++ b/index.ipynb
@@ -152,9 +152,9 @@
    ],
    "source": [
     "print(y_values_for_at_one(zero_to_four)) # [0, 3, 6, 9, 12]\n",
-    "y_values_for_at_one(zero_to_ten) # [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n",
+    "print(y_values_for_at_one(zero_to_ten)) # [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n",
     "\n",
-    "y_values_for_at_three(zero_to_four) # [0, 9, 18, 27, 36]\n",
+    "print(y_values_for_at_three(zero_to_four)) # [0, 9, 18, 27, 36]\n",
     "y_values_for_at_three(zero_to_ten) # [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90]\n",
     "\n",
     "y_values_for_at_six(zero_to_four) # [0, 18, 36, 54, 72]\n",
