Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -580,8 +580,8 @@
    "source": [
     "def df_dx_when_y_equals_one():\n",
     "    #of what function?  Assuming it is still f(x, y) = 3xy, then...\n",
-    "    #d_dx (3x) =\n",
-    "    return "
+    "    #d_dx (3x) = 3\n",
+    "    return 3"
    ]
   },
   {
