--- a/index.ipynb
+++ b/index.ipynb
@@ -591,6 +591,8 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_three():\n",
+    "    #of what function?  Assuming it is still f(x, y) = 3xy, then...\n",
+    "    #d_dx (3x) = 3\n",
     "    pass"
    ]
   },
