Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -593,7 +593,7 @@
     "def df_dx_when_y_equals_three():\n",
     "    #of what function?  Assuming it is still f(x, y) = 3xy, then...\n",
     "    #d_dx [(3x)3] = 9\n",
-    "    retu"
+    "    return 9"
    ]
   },
   {
@@ -605,7 +605,9 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_six():\n",
-    "    pass"
+    "    #of what function?  Assuming it is still f(x, y) = 3xy, then...\n",
+    "    #d_dx [(3x)3] = 9\n",
+    "    return "
    ]
   },
   {
