Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -607,7 +607,7 @@
     "def df_dx_when_y_equals_six():\n",
     "    #of what function?  Assuming it is still f(x, y) = 3xy, then...\n",
     "    #d_dx [(3x)6] = 18\n",
-    "    return "
+    "    return 18"
    ]
   },
   {
