Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -858,7 +858,7 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    return (term[1]*term[0], term[1]-1, term[2]) #y is treated as C"
+    "    return (term[1]*term[0], term[1]-1, term[2]) #y is treated as constant when taking partial derivative wrt"
    ]
   },
   {
