--- a/index.ipynb
+++ b/index.ipynb
@@ -964,17 +964,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    return (term[2]term[0], term[1], term[2]-1)"
+    "    return (term[2]*term[0], term[1], term[2]-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
        "(4, 2, 1)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
